--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.js"
+    "client": "npm run dev --prefix library-frontend",
+    "dev": "concurrently \"node index.js\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,8 @@
     "@apollo/server": "^4.10.4",
     "graphql": "^16.8.1",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
